--- a/04-deployment/starter.ipynb
+++ b/04-deployment/starter.ipynb
@@ -525,8 +525,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f752b96a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total 66M\r\n",
+      "-rw-r--r-- 1 oleh oleh 66M Jul 12 15:37 yellow_tripdata_2023-03.parquet\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls -l output --block-size=M"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59383f10",
    "metadata": {},
    "outputs": [],
    "source": []
